err/emdash.err
Listing '.'...
Listing './bin'...
Compiling './bin/emdash_microscopy.py'...
Compiling './bin/emdash_upload.py'...
Compiling './bin/emen2client.py'...
***   File "./bin/emen2client.py", line 15
    print """%s <action>

Actions available: upload, download
For detailed help: %s <action> --help
    """%(sys.argv[0],sys.argv[0])
                        

                                   
                                     
      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/emdash'...
Compiling './lib/python3.5/site-packages/emdash/emhandlers.py'...
***   File "./lib/python3.5/site-packages/emdash/emhandlers.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/emmodels.py'...
***   File "./lib/python3.5/site-packages/emdash/emmodels.py", line 113
    raise Exception, "No target!"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/emthreads.py'...
***   File "./lib/python3.5/site-packages/emdash/emthreads.py", line 125
    raise Exception, "UploadThread: Invalid record name for upload: %s"%target
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/emwizard.py'...
***   File "./lib/python3.5/site-packages/emdash/emwizard.py", line 484
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/handlers.py'...
***   File "./lib/python3.5/site-packages/emdash/handlers.py", line 173
    raise httplib.HTTPException, "Error: %s"%(reason)
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/log.py'...
***   File "./lib/python3.5/site-packages/emdash/log.py", line 11
    print ' '.join(map(unicode, msg))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/microscopy.py'...
***   File "./lib/python3.5/site-packages/emdash/microscopy.py", line 166
    raise ValueError, "No microscope specified!"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/emdash/transport.py'...
***   File "./lib/python3.5/site-packages/emdash/transport.py", line 53
    raise Exception, "Must provide exactly ONE file for a HTTP PUT request."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emdash/ui'...
Compiling './lib/python3.5/site-packages/emdash/ui/__init__.py'...
***   File "./lib/python3.5/site-packages/emdash/ui/__init__.py", line 10
    print "Compiling %s"%base
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/emdash/upload.py'...
***   File "./lib/python3.5/site-packages/emdash/upload.py", line 215
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/emdash-2.2b5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
